refactor: callback api to return searchParams redirect instead of Response

--- a/src/components/Layouts/Footer.astro
+++ b/src/components/Layouts/Footer.astro
@@ -29,7 +29,7 @@ const SOCIAL_LINKS = [
 ] as const;
 ---
 
-<footer class="flex items-center justify-center gap-6 p-2 text-2xl">
+<footer class="flex items-center justify-center gap-6  text-2xl">
   {
     SOCIAL_LINKS.map((social) => (
       <a
@@ -58,3 +58,4 @@ const SOCIAL_LINKS = [
     ))
   }
 </footer>
+
