--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -1,6 +1,8 @@
 ---
 import { Moon, Sun } from "lucide-react";
 
+//TODO: dashboard burger menu
+
 export const prerender = false;
 const pathname = Astro.url.pathname;
 
