--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,12 +2,13 @@
 import Header from "@/components/Layouts/Header.astro";
 import Footer from "@/components/Layouts/Footer.astro";
 import "@/styles/global.css";
+import type { HTMLAttributes } from "astro/types";
 
-interface Props {
+type Props = {
   title: string;
-}
+} & HTMLAttributes<"div">;
 
-const { title } = Astro.props;
+const { title, class: className, "class:list": cn } = Astro.props;
 ---
 
 <!doctype html>
@@ -22,9 +23,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <div class="relative grid min-h-dvh grid-rows-[auto_1fr_auto]">
+    <div class:list={["relative grid min-h-dvh grid-rows-[auto_1fr_auto]", className, cn]}>
       <Header />
-      <main class="relative p-4">
+      <main class="relative px-4">
         <slot />
       </main>
       <Footer />
